--- a/.env.local.example
+++ b/.env.local.example
@@ -19,15 +19,15 @@ UPSTASH_REDIS_REST_TOKEN=your-token-here
 
 # Alpha Vantage (free tier: 5 calls/min, 500/day)
 # Get key: https://www.alphavantage.co/support/#api-key
-ALPHA_VANTAGE_API_KEY=HMV5OZTWUPO1IH2X
+ALPHA_VANTAGE_API_KEY=demo
 
 # TwelveData (recommended - better rate limits)
 # Get key: https://twelvedata.com/
-TWELVE_DATA_API_KEY=06b7f9e267cb40db9d71613f0d7b1b55
+TWELVE_DATA_API_KEY=
 
 # Massive (formerly Polygon.io - professional data)
 # Get key: https://massive.com/
-POLYGON_API_KEY=eByLxJsrcRgpOm1kZs84W_hht4aiCACG
+POLYGON_API_KEY=
 
 # Finnhub (good free tier)
 # Get key: https://finnhub.io/
@@ -38,7 +38,7 @@ FINNHUB_API_KEY=
 # ============================================================================
 # FRED (Free - for economic calendar)
 # Get key: https://fred.stlouisfed.org/docs/api/api_key.html
-FRED_API_KEY=80b2977b9b0d4438604baf5d870bb969 
+FRED_API_KEY=
 
 # ============================================================================
 # AI & OPENAI (Optional - users can add their own)
