--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.0.3",
     "zod": "^3.22.4",
     "date-fns": "^3.3.1",
+    "date-fns-tz": "^3.0.0",
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.1",
     "lucide-react": "^0.323.0",
