--- a/.env.local.example
+++ b/.env.local.example
@@ -2,6 +2,7 @@
 # AUTHENTICATION & DATABASE (Supabase)
 # ============================================================================
 # Get these from: https://supabase.com/dashboard/project/_/settings/api
+# VIKTIGT: INGA QUOTES runt värden!
 NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
 
@@ -9,6 +10,7 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
 # CACHING (Upstash Redis)
 # ============================================================================
 # Get these from: https://console.upstash.com/
+# VIKTIGT: INGA QUOTES runt värden!
 UPSTASH_REDIS_REST_URL=https://your-redis.upstash.io
 UPSTASH_REDIS_REST_TOKEN=your-token-here
 
@@ -36,9 +38,14 @@ FINNHUB_API_KEY=
 # ============================================================================
 # CALENDAR & ECONOMIC DATA
 # ============================================================================
-# FRED (Free - for economic calendar)
+# FRED (Free - historical economic data)
 # Get key: https://fred.stlouisfed.org/docs/api/api_key.html
 FRED_API_KEY=
+
+# Trading Economics (Recommended - future calendar events!)
+# Get key: https://tradingeconomics.com/analytics/api.aspx
+# Free tier: 500 calls/month
+TRADING_ECONOMICS_API_KEY=
 
 # ============================================================================
 # AI & OPENAI (Optional - users can add their own)
